crates/eml_cli/tests/snapshots/integration__ui__run@functions__closures.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/functions/closures.em
---
--- stdout ---
hey!
you!
n = 3
n = 2
n = 1
100000
--- stderr ---
