crates/eml_cli/tests/snapshots/integration__ui__run@functions__partial_application.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/functions/partial_application.em
---
--- stdout ---
hi, alice
hi, bob
hello, carol
7
15
--- stderr ---
