crates/eml_cli/tests/snapshots/integration__ui__run@functions__point_free_main.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/functions/point_free_main.em
---
--- stdout ---
point-free
--- stderr ---
