crates/eml_cli/tests/snapshots/integration__ui__run@functions__polymorphic_recursion.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/functions/polymorphic_recursion.em
---
--- stdout ---
10
42
--- stderr ---
