crates/eml_cli/tests/snapshots/integration__ui__run@functions__sections.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/functions/sections.em
---
--- stdout ---
42
99
42
7
yes
no
same
not both
--- stderr ---
