crates/eml_cli/tests/snapshots/integration__ui__run@functions__use.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/functions/use.em
---
--- stdout ---
log: start
1
2
--- stderr ---
